--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     docker:
       - image: cimg/php:8.1-node
       - image: mysql:8.0
+        name: mysql
         environment:
           MYSQL_DATABASE: laravel_test
           MYSQL_USER: user
@@ -24,7 +25,7 @@ jobs:
           name: Set database config
           command: |
             echo "DB_CONNECTION=mysql" >> .env
-            echo "DB_HOST=127.0.0.1" >> .env
+            echo "DB_HOST=mysql" >> .env  # 🔹 Use service name, not 127.0.0.1
             echo "DB_PORT=3306" >> .env
             echo "DB_DATABASE=laravel_test" >> .env
             echo "DB_USERNAME=user" >> .env
