--- a/.circleci/configProd.yml
+++ b/.circleci/configProd.yml
@@ -60,10 +60,24 @@ jobs:
       - run:
           name: deploy
           command: '#e.g. ./deploy.sh'
+# workflows:
+#   build-and-test:
+#     jobs:
+#       - test-php
+#     # - deploy:
+#     #     requires:
+#     #       - test-php
 workflows:
-  build-and-test:
+  production_pipeline:
+    when:
+      equal: [ "main", << pipeline.git.branch >> ]
     jobs:
-      - test-php
-    # - deploy:
-    #     requires:
-    #       - test-php
+      - test-prod
+      # - deploy-prod
+
+  development_pipeline:
+    when:
+      equal: [ "dev", << pipeline.git.branch >> ]
+    jobs:
+      - test-dev
+      # - deploy-dev
