--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
-# This config was automatically generated from your source code
-# Stacks detected: deps:node:.,deps:php:.
 version: 2.1
+
 orbs:
   php: circleci/php@1
+
 jobs:
   test-php:
-    # Install php packages and run tests
     docker:
       - image: cimg/php:8.1-node
       - image: mysql:8.0
@@ -22,10 +21,10 @@ jobs:
           name: Setup environment file
           command: cp .env.example .env
       - run:
-          name: Set database config
+          name: Configure database
           command: |
             echo "DB_CONNECTION=mysql" >> .env
-            echo "DB_HOST=mysql" >> .env  # 🔹 Use service name, not 127.0.0.1
+            echo "DB_HOST=mysql" >> .env
             echo "DB_PORT=3306" >> .env
             echo "DB_DATABASE=laravel_test" >> .env
             echo "DB_USERNAME=user" >> .env
@@ -34,23 +33,12 @@ jobs:
           name: Generate application key
           command: php artisan key:generate
       - run:
-          name: Wait for MySQL
-          command: |
-            for i in {1..30}; do
-              nc -z mysql 3306 && echo "MySQL is up!" && exit 0
-              echo "Waiting for MySQL..."
-              sleep 2
-            done
-            echo "MySQL failed to start" && exit 1
-      - run:
-          name: Clear config cache
-          command: php artisan config:clear
-      - run:
           name: Run migrations
-          command: php artisan migrate --env=testing --force
+          command: php artisan migrate --force
       - run:
-          name: run tests
+          name: Run tests
           command: ./vendor/bin/phpunit
+
   deploy:
     docker:
       - image: cimg/base:stable
@@ -58,62 +46,41 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "SHA256:PHpuUx3tNLUkLE3O0BSULMrzvXJ0KHQ6uOSqKTtEdFM" # Replace with the actual key fingerprint from CircleCI
+            - "SHA256:PHpuUx3tNLUkLE3O0BSULMrzvXJ0KHQ6uOSqKTtEdFM"  # Replace with your actual SSH key fingerprint from CircleCI
       - run:
-          name: Setup SSH Key
+          name: Setup SSH Key & Deploy
           command: |
             mkdir -p ~/.ssh
-            echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+            echo "$AWS" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
-      - run:
-          name: SSH into Production & Deploy
-          command: |
-            # ssh -o StrictHostKeyChecking=no ubuntu@54.163.148.40 \<< 'EOF'
-            ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@54.163.148.40 \<< 'EOF'
-              # Navigate to the home directory
-              cd /home/ubuntu/workspace
+            ssh-keyscan -H $AWS_SERVER_IP >> ~/.ssh/known_hosts
+            ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$AWS_SERVER_IP << 'EOF'
+              echo "✅ Connected to AWS EC2"
 
-              # If the project directory doesn't exist, clone it
-              if [ ! -d "laravel-circle-ci" ]; then
-                git clone git@github.com:AymaneQualiso/laravel-circle-ci.git
+              # Ensure project directory exists
+              mkdir -p /home/ubuntu/workspace
+              cd /home/ubuntu/workspace || exit 1
+
+              # Clone or pull latest code
+              if [ ! -d ".git" ]; then
+                git clone git@github.com:AymaneQualiso/laravel-circle-ci.git .
+              else
+                git reset --hard
+                git pull origin main || true
               fi
 
-              # Enter the project directory
-              cd laravel-circle-ci
-
-              # Ensure we have the latest code
-              git pull origin main
-
-              # Build and run the Docker container
-              # sudo docker build -t front-app .
-              # sudo docker stop front-app || true
-              # sudo docker rm front-app || true
-              # sudo docker run -dp 4444:80 --name front-app front-app
+              # Restart application (Modify as needed)
+              sudo systemctl restart nginx php-fpm
             EOF
-# workflows:
-#   build-and-test:
-#     jobs:
-#       - test-php
-#     # - deploy:
-#     #     requires:
-#     #       - test-php
+
 workflows:
+  version: 2
   production_pipeline:
-    when:
-      equal: [ "main", << pipeline.git.branch >> ]
     jobs:
       - test-php
-      # - deploy-prod
       - deploy:
           requires:
-            - test-php # only deploy once build job has completed
+            - test-php
           filters:
             branches:
               only: main
-
-  development_pipeline:
-    when:
-      equal: [ "main", << pipeline.git.branch >> ]
-    jobs:
-      - test-php
-      # - deploy-dev
