--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,10 +62,11 @@ jobs:
       - run:
           name: Setup SSH Key & Deploy
           command: |
-            mkdir -p ~/.ssh
+            # mkdir -p ~/.ssh
             # echo "$AWS" > ~/.ssh/deploy_key.pem
             echo "$AWS" > deploy_key.pem
             chmod 600 deploy_key.pem
+            cat deploy_key.pem
             ssh-keyscan -H $AWS_SERVER_IP >> ~/.ssh/known_hosts
             # ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$AWS_SERVER_IP \<< 'EOF'
             ssh -i deploy_key.pem -o StrictHostKeyChecking=no ubuntu@$AWS_SERVER_IP \<< 'EOF'
