--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,11 +96,11 @@ F35X9QU3x9sWkrug+ewYSU1bl+Srt6PWO5orThUvGLW9Me/utOn8
             # cat "$AWS_PRIVATE_KEY"
 
             # cat "$AWS_SERVER_IP"
-            echo "$AWS_PRIVATE_KEY" > deploy_key.pem
+            echo "$SSH_PRIVATE_KEY" > deploy_key.pem
             chmod 600 deploy_key.pem
-            ssh-keyscan -H $AWS_SERVER_IP >> ~/.ssh/known_hosts
+            ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
 
-            ssh -o StrictHostKeyChecking=no -i deploy_key.pem $AWS_USER@$AWS_SERVER_IP \<< 'EOF'
+            ssh -o StrictHostKeyChecking=no -i deploy_key.pem $USER@$SERVER_IP \<< 'EOF'
               echo "✅ Connected to AWS EC2"
 
               # Ensure project directory exists
