--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,10 +108,12 @@ F35X9QU3x9sWkrug+ewYSU1bl+Srt6PWO5orThUvGLW9Me/utOn8
               if [ ! -d ".git" ]; then
                 git clone git@github.com:AymaneQualiso/laravel-circle-ci.git .
               else
-                # Pull Latest Changes
                 git reset --hard
                 git pull origin main || true
-              fi
+              fi
+
+              # Restart application (Modify as needed)
+              # sudo systemctl restart nginx php-fpm
             EOF
           # command: |
           #   # Decode SSH private key from Base64 to prevent formatting issues
