--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - run:
           name: Setup SSH Key & Deploy
           command: |
-            ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $AWS_USER@$AWS_SERVER_IP "
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 $AWS_USER@$AWS_SERVER_IP "
               cd /home/ubuntu/workspace
               if [ ! -d ".git" ]; then
                 git clone git@github.com:AymaneQualiso/laravel-circle-ci.git .
